--- a/Recap/Website/templates/Website/index.html
+++ b/Recap/Website/templates/Website/index.html
@@ -3,7 +3,6 @@
 <head>
 	{% load static %}
 	<title>Animated Login Form</title>
-	<link rel="stylesheet" type="text/css" href="index.css">
 	<link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/a81368914c.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +15,8 @@
 			<img src="{% static  'Website/images/bg.svg' %}">
 		</div>
 		<div class="login-content">
-			<form action="index.html">
+			<form method="POST">
+				{% csrf_token %}
 				<img src="{% static  'Website/images/yt.png' %}">
 				<h2 class="title">Welcome</h2>
            		<div class="input-div one">
@@ -25,13 +25,13 @@
            		   </div>
            		   <div class="div">
            		   		<h5>Enter Yt Video :- </h5>
-           		   		<input type="text" class="input">
+           		   		<input type="text" class="input" name ='hack' id ='hack'>
            		   </div>
            		</div>
             	<input type="submit" class="btn" value="Proceed">
             </form>
         </div>
     </div>
-    <script type="text/javascript" src="{% static 'Website/main.js' %}"></script>
+    <script type="text/javascript" src="{% static 'Website/jsfile/main.js' %}"></script>
 </body>
 </html>
