--- a/result/result.css
+++ b/result/result.css
@@ -1,80 +1,96 @@
-body{
-    /* background-image: url("https://ak9.picdn.net/shutterstock/videos/10034429/thumb/1.jpg"); */
-    background-image: url("https://www.codepark.in/static/media/img_5.829ddbf4.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: contain;
-  }
-  
-  *{
-    margin: 0;
-    padding: 0;
-    font-family: "montserrat",sans-serif;
-  }
-  .contact-section{
-    /* background: url(bg.png) no-repeat center; */
-    background-size: cover;
-    padding: 40px 0;
-  }
-  .contact-section h1{
-    text-align: center;
-    color: black;
-  }
-  .border{
-    width: 100px;
-    height: 10px;
-    background: #2CCC93;
-    margin: 40px auto;
-  }
-  
-  .contact-form{
-    /* max-width: 600px; */
-    margin: auto;
-    padding: 0 10px;
-    overflow: hidden;
-    display: grid;
-    justify-content: center;
-    margin: 0 1rem 0 1rem;
-  }
-  
-  .contact-form-text{
-    display: block;
-    width: 100%;
-    box-sizing: border-box;
-    margin: 16px 0;
-    border: 0;
-    background: #fff;
-    padding: 20px 40px;
-    outline: none;
-    color: #111;
-    transition: 0.5s;
-  }
-  .contact-form-text:focus{
-    box-shadow: 0 0 10px 4px #2CCC93;
-  }
-  textarea.contact-form-text{
-    resize: none;
-    height: 20rem;
-    width: 50rem;
-    border: solid #2CCC93 5px;
-    border-radius: 40px;
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 
-  }
-  .contact-form-btn{
-    float: right;
-    border: 0;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  outline: none;
+  font-family: 'Roboto', sans-serif;
+}
+
+html{
+  /* background: url('https://www.codepark.in/static/media/grassbig.2644c9f2.png'); */
+  background-size: cover;
+  background-repeat: no-repeat;
+  /* background-position-y: bottom; */
+}
+
+.wrapper{
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 100%;
+  padding: 0 20px;
+}
+
+.contact-form{
+  display: flex;
+  /* max-width: 550px; */
+  margin: 0 auto;
+  background: rgba(0,0,0,0.8);
+  padding: 30px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.3);
+}
+
+.input-fields{
+  display: flex;
+  flex-direction: column;
+  margin-right: 4%;
+}
+
+.input-fields,
+.msg{
+  width: 48%;
+}
+
+.input-fields .input,
+.msg textarea{
+  margin: 10px 0;
+  background: transparent;
+  border: 0px;
+  border-bottom: 2px solid #c5ecfd;
+  padding: 10px;
+  color: #2CCC93;
+  width: 100%;
+}
+
+.msg textarea{
+  height: 212px;
+}
+
+::-webkit-input-placeholder {
+  /* Chrome/Opera/Safari */
+  color: #c5ecfd;
+}
+::-moz-placeholder {
+  /* Firefox 19+ */
+  color: #2CCC93;
+}
+:-ms-input-placeholder {
+  /* IE 10+ */
+  color: #2CCC93;
+}
+
+.btn {
     background: #2CCC93;
+    text-align: center;
+    padding: 15px;
+    border-radius: 5px;
     color: #fff;
-    padding: 12px 50px;
-    border-radius: 20px;
     cursor: pointer;
-    transition: 0.5s;
+    text-transform: uppercase;
+}
+
+@media screen and (max-width: 600px){
+  .contact-form{
+    flex-direction: column;
   }
-  .contact-form-btn:hover{
-    background: #2980b9;
+  .msg textarea{
+    height: 80px;
   }
-  
-  .youtube{
-    display: flex;
-    justify-content: center;
+  .input-fields,
+  .msg{
+    width: 100%;
   }
+}
