--- a/Recap/Website/templates/Website/index.html
+++ b/Recap/Website/templates/Website/index.html
@@ -7,6 +7,10 @@
 	<script src="https://kit.fontawesome.com/a81368914c.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="{% static 'Website/cssfile/indexcss.css' %}">
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+	<script src="https://use.fontawesome.com/d1341f9b7a.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
 </head>
 <body>
 	<img class="wave" src="{% static 'Website/images/wave.png' %}">
@@ -24,7 +28,7 @@
            		   		<i class="fas fa-user"></i>
            		   </div>
            		   <div class="div">
-           		   		<h5>Enter Yt Video :- </h5>
+           		   		<h5>Enter Yt Url:- </h5>
            		   		<input type="text" class="input" name ='hack' id ='hack'>
            		   </div>
            		</div>
