--- a/Recap/Website/templates/Website/index.html
+++ b/Recap/Website/templates/Website/index.html
@@ -21,7 +21,7 @@
 		<div class="login-content">
 			<form method="POST">
 				{% csrf_token %}
-				<img src="{% static  'Website/images/yt.png' %}">
+				<img src="{% static  'Website/images/RC.svg' %}">
 				<h2 class="title">Welcome</h2>
            		<div class="input-div one">
            		   <div class="i">
