--- a/Recap/Website/templates/Website/result.html
+++ b/Recap/Website/templates/Website/result.html
@@ -1,33 +1,57 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     {% load static %}
 	<meta charset="UTF-8">
-	<title>Contact Us form</title>
+    <title>Result</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'Website/cssfile/resultcss.css' %}">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <script src="https://use.fontawesome.com/d1341f9b7a.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Asul&display=swap" rel="stylesheet">
 </head>
 <body>
-	
-<div class="wrapper">
-  <div class="contact-form">
-    <div class="input-fields msg">
-      <p placeholder="Summary!">
-          <h2 class="mb-4" style="color: #fff;">Summary : -</h2><br>
-          <p class="mt-5" style="color: #fff;font-family: Asul;word-spacing: 4px;">{{summary}} .</p>
-      </p>
+    <div class="container-fluid main1">
+        <div class="row mt-5">
+            <div class="col-12 text-center">
+                <img src="{% static 'Website/images/RECAP1.svg' %}">
+            </div>
+        </div>
+        <div class="container" style="margin-top: 5%;margin-bottom: 2%;">
+            <div class="row">
+                <div class="col-md-8">
+                    <div class="card" style="width: auto;">
+                        <div class="card-body">
+                          <h5 class="card-title todo">Summary :-</h5>
+                          <hr>
+                          <p class="card-text">{{summary}}</p>
+                          <button href="#" class="b mt-2 hvr-sweep-to-left">Start Again</button>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-4">
+                    <form method="POST">
+                        {% csrf_token %}
+                          <div class="card card-outline-secondary p-5">
+                        <div class="form-group bod">
+                          <label for = 'song'>Enter desired %age</label>
+                          <input type="text" class="form-control" required name = 'word' id = 'word'><br>
+                          <small class="text-fade d-inline-block">Default %age shrink : 20%</small>
+                        </div>
+                        <button type="submit" class="f mt-1 d-block hvr-float-shadow">Go !</button>
+                        </div>
+                      </form>
+                      
+                      <div class="mt-5 embed-responsive embed-responsive-16by9">
+                        <iframe class="embed-responsive-item mt-5" src="{{url}}"  width="200" height="200" allowfullscreen></iframe>
+                      </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="msg input-fields">
-      <input type="text" class="input" placeholder="Enter keyword">
-      <div class="btn">Search Keyword</div>
-    </div>
-  </div>
-</div>	
-
 
 </body>
 </html>
