--- a/Recap/Website/templates/Website/result.html
+++ b/Recap/Website/templates/Website/result.html
@@ -4,7 +4,7 @@
 <head>
     {% load static %}
 	<meta charset="UTF-8">
-    <title>Result</title>
+    <title>Recap</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'Website/cssfile/resultcss.css' %}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -12,27 +12,57 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Asul&display=swap" rel="stylesheet">
+    <link rel="icon" href="{% static 'Website/images/RC.svg' %}">
 </head>
+<style>
+  div.container{
+    margin-top: 7%;
+    margin-bottom: 2%;
+  }
+    @media screen and (max-width: 790px){
+    p.c{
+      font-size: 17px;
+    }
+  }
+  @media screen and (max-width: 555px){
+    img{
+      height: 4rem;
+    }
+    div.card{
+      padding: 0;
+      justify-content: center;
+    }
+    p.c{
+      justify-content: center;
+    }
+    div.container{
+      margin-top: 10%;
+    }
+  }
+</style>
+
 <body>
     <div class="container-fluid main1">
         <div class="row mt-5">
-            <div class="col-12 text-center">
+            <div class="col-12  text-center">
                 <img src="{% static 'Website/images/RECAP1.svg' %}">
             </div>
         </div>
-        <div class="container" style="margin-top: 5%;margin-bottom: 2%;">
+        <div class="container">
             <div class="row">
-                <div class="col-md-8">
+                <div class="col-xl-8 col-lg-12 order-xl-1 order-2">
                     <div class="card" style="width: auto;">
                         <div class="card-body">
                           <h5 class="card-title todo">Summary :-</h5>
                           <hr>
-                          <p class="card-text">{{summary}}</p>
+                          <p class="card-text c">{{summary}}</p>
+                          <a href="http://127.0.0.1:8000/">
                           <button href="#" class="b mt-2 hvr-sweep-to-left">Start Again</button>
+                          </a>
                         </div>
                       </div>
                 </div>
-                <div class="col-4">
+                <div class="col-xl-4 col-lg-6 col-md-6 col-12 mb-4 order-xl-2 order-1">
                     <form method="POST">
                         {% csrf_token %}
                           <div class="card card-outline-secondary p-5">
@@ -44,10 +74,6 @@
                         <button type="submit" class="f mt-1 d-block hvr-float-shadow">Go !</button>
                         </div>
                       </form>
-                      
-                      <div class="mt-5 embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item mt-5" src="{{url}}"  width="200" height="200" allowfullscreen></iframe>
-                      </div>
                 </div>
             </div>
         </div>
